[tool.poetry]
name = "radium"
version = "0.1.0"
description = ""
authors = ["Dev-cmyser <cmyser.fast@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.4"
asyncio = "^3.4.3"
tqdm = "^4.65.0"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
